[package]
name = "roast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorr_fun = { path = "../secp256kfun/schnorr_fun" }
secp256kfun = { path = "../secp256kfun/secp256kfun" }
rand = "0.8.5"
sha2 = "0.10"
rng = "0.1.0"
clightningrpc = "0.2.0"