[package]
name = "roast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorr_fun = { version = "0.8.2", features = ["serde"] }
secp256kfun = { version = "0.8.2", features = ["proptest"] }
rand = "0.8.5"
sha2 = "0.10"
rng = "0.1.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
schnorr_fun = "0.8"

[features]
default = ["frost"]
frost = []