[package]
name = "roast-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorr_fun = { path = "../../secp256kfun/schnorr_fun", features = ["serde"] }
secp256kfun = { path = "../../secp256kfun/secp256kfun", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10"
rng = "0.1.0"
clightningrpc = "0.2.0"

# for async
rocket = "0.5.0-rc.2"
thiserror = "1.0.21"
reqwest = "0.11.12"
serde_json = "1.0.85"
